1.6.0.1 (minor z-index fix)

--- a/styles/oldhome.css
+++ b/styles/oldhome.css
@@ -2,6 +2,7 @@ body {
     background-color: rgb(155, 155, 155);
     /*font-family: sans-serif;*/
     overflow-x: clip;
+    z-index: 0;
 }
 
 ::-webkit-scrollbar {
